vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcheaderfieldpolicy-1.warc
WARC/1.0
WARC-Type: hello_kitty

